# testclient

./: .gitignore  CMakeLists.txt  Log.cpp  Log.h  log_test.cpp  main.cpp  testclient.cpp  testclient.h  testclient.qrc  testclient.ui  testclient.vcxproj  testclient.vcxproj.filters
GeneratedFiles/: qrc_testclient.cpp  ui_testclient.h
